# AllControlBase

./: README.md  TurtleBot1_完整部署指南.md  pyproject.toml  run_all_tests.py  setup.py  test_log.txt  test_log_final.txt  test_log_final_2.txt  test_log_final_3.txt  test_log_final_4.txt  verify_refactor.py
controller_ros/: ARCHITECTURE.md  CHANGELOG_unified_diagnostics.md  CMakeLists.txt  CONFIG_ARCHITECTURE.md  OPTIMIZATION_NOTES.md  README.md  package.xml  setup.py
controller_ros/config/: ackermann.yaml  controller_params.yaml  differential.yaml  omni.yaml  quadrotor.yaml  turtlebot1.yaml  visualizer_params.yaml
controller_ros/config/base/: controller_params.yaml  internal_params.yaml
controller_ros/config/tools/: visualizer_params.yaml
controller_ros/docs/: TurtleBot1_完整部署指南.md
controller_ros/launch/: controller.launch  controller.launch.py  dashboard.launch  trajectory_visualizer.launch  turtlebot1.launch  visualizer.launch
controller_ros/launch/core/: controller.launch  controller.launch.py
controller_ros/launch/tools/: dashboard.launch  trajectory_visualizer.launch  visualizer.launch  visualizer.launch.py
controller_ros/msg/: AttitudeCmd.msg  DiagnosticsV2.msg  LocalTrajectoryV4.msg  UnifiedCmd.msg
controller_ros/scripts/: ENCODING_FIX.md  check_visualizer_setup.py  cmd_vel_adapter.py  controller_node.py  dashboard_node.py  diagnose.py  diagnose_dashboard.py  diagnose_trajectory.py  enhanced_diagnostics.py  full_diagnostics.py  install_all.sh  start_all.sh  trajectory_publisher.py  trajectory_visualizer.py  unified_diagnostics.py  visualizer_node.py
controller_ros/src/controller_ros/: __init__.py
controller_ros/src/controller_ros/adapters/: __init__.py  attitude_adapter.py  base.py  imu_adapter.py  odom_adapter.py  output_adapter.py  trajectory_adapter.py
controller_ros/src/controller_ros/bridge/: __init__.py  controller_bridge.py  tf_bridge.py
controller_ros/src/controller_ros/dashboard/: __init__.py  ros_data_source.py
controller_ros/src/controller_ros/io/: __init__.py  data_manager.py  publishers.py  ros1_publishers.py  ros1_services.py  services.py  subscribers.py
controller_ros/src/controller_ros/lifecycle/: README.md  __init__.py  adapters.py  health_checker.py  interfaces.py  mixins.py
controller_ros/src/controller_ros/node/: __init__.py  base_node.py  controller_node.py  controller_node_ros1.py
controller_ros/src/controller_ros/utils/: __init__.py  diag_filler.py  diagnostics_publisher.py  error_handler.py  msg_availability.py  param_loader.py  param_utils.py  ros_compat.py  tf2_injection_manager.py  time_sync.py  visualizer_param_loader.py
controller_ros/src/controller_ros/visualizer/: README.md  __init__.py  homography.py  main_window.py
controller_ros/src/controller_ros/visualizer/adapters/: image_adapter.py
controller_ros/src/controller_ros/visualizer/handlers/: data_aggregator.py  joystick_handler.py
controller_ros/src/controller_ros/visualizer/node/: ros_bridge.py  visualizer_node.py
controller_ros/src/controller_ros/visualizer/widgets/: joystick_panel.py  status_bar.py  trajectory_view.py  velocity_panel.py  velocity_plot.py
controller_ros/srv/: GetAttitudeRateLimits.srv  GetDiagnostics.srv  SetControllerState.srv  SetHoverYaw.srv
controller_ros/test/: __init__.py  conftest.py  test_adapter_edge_cases.py  test_adapters.py  test_attitude_adapter.py  test_base_node.py  test_bridge.py  test_cmd_vel_adapter.py  test_data_manager.py  test_diagnostics_publisher.py  test_emergency_stop.py  test_integration.py  test_lifecycle_adapters.py  test_module_integration.py  test_param_loader.py  test_quadrotor_features.py  test_ros_data_source.py  test_tf2_injection_manager.py  test_time_sync.py  test_trajectory_publisher.py  test_visualizer_import.py
controller_ros/test/fixtures/: bridge_mocks.py
controller_ros/tuning_output/: analysis_summary.json  diagnostics_report.txt  tuned_turtlebot1.yaml
moshi/: day2_chassis.yaml  first_deployment_config.yaml  runtime_tuned_config.yaml
tools/tuning/: README.md  __init__.py  auto_tune.py  config_generator.py  data_collector.py  diagnostics_analyzer.py  run_diagnostics.py
tuning_output/: auto_tune_report.txt  tuned_turtlebot1.yaml
universal_controller/: OPTIMIZATION_SUGGESTIONS.md  README.md  REFACTORING_NOTES.md  __init__.py  main.py  requirements.txt
universal_controller/compat/: __init__.py  ros_compat_impl.py
universal_controller/config/: README.md  __init__.py  backup_config.py  consistency_config.py  default_config.py  ekf_config.py  mock_config.py  modules_config.py  mpc_config.py  platform_config.py  profiles.py  safety_config.py  system_config.py  trajectory_config.py  validation.py
universal_controller/consistency/: weighted_analyzer.py
universal_controller/core/: __init__.py  constants.py  data_types.py  enums.py  exceptions.py  indices.py  interfaces.py  logging_config.py  ros_compat.py  validators.py  velocity_smoother.py
universal_controller/dashboard/: __init__.py  data_source.py  main_window.py  models.py  ros_data_source.py  styles.py
universal_controller/diagnostics/: publisher.py
universal_controller/docs/: analysis_controller_ros_cn.md
文档/: 01_技术文档.md  02_使用文档.md  03_项目结构.md  04_快速参考.md  05_对接文档.md
需求/: 07_状态估计器.md  11_配置参数.md  12_测试计划.md  14_ROS胶水层设计.md
(+55 files in other folders)
